# fitplan

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml  secrets.toml
src/fitplan/: Home.py  fitplan.py
src/fitplan/pages/: 1-Users.py
tests/: test_fitplan.py
uml/src/: classes.uml  objects.uml
