[tool.poetry]
name = "fitplan"
version = "0.0.0"
description = ""
authors = ["Antonello Izzi <ai9840.github@gmail.com>"]
readme = "README.md"
packages = [{include = "fitplan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.27"
streamlit = "^1.31.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.extras]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
